# pepc

./: .excludes  .gitignore  .gitlab-ci.yml  .project  CHANGELOG.md  CHANGES  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  CVSMAIL  DESCRIPTION.md  DISCLAIMER  Dockerfile  Doxyfile  Makefile.pepc  README  README.compile  README.jubl  README.kojak  README.md  README.pepc  README.run  README.runtime_errors  README.scarf  TODO  acx_mpi.m4  clean_pes  config.h.in  configure  configure.in  create_pes  makefile  makefile.defs  makefile.defs_gcc  makefile.defs_intel  makefile.in  merge1_dump  merge_dump  mkdocs.yml  packbeta  (+8 more)
.githooks/: prepare-commit-msg
DVH_examples/: ring_advection.h
benchmark/: CI_parameters.xml  benchmark.xml  check.xml  correct_pinning.sh  filter_step_0.sh  gather_timesteps.sh  job.ompi.slurm.skel  job.slurm.skel  job_booster.slurm.skel  job_booster.slurm.skel_Intel  job_booster.slurm.skel_OMPI  job_booster.slurm.skel_PS  job_julia.slurm.skel  job_jureca.slurm.skel  job_jureca.slurm.skel_OMPI  job_jureca.slurm.skel_PS  params.skel  prepare_env.sh  show_ompi_binding.sh  user_parameters.xml
cb_testing/: result_database.sqlite
chain_demo/: LLF  PE_list  block1.sh  clean_pes  fort.15  parts_info.in  run.h  run.out  run1.h  spk.rc
demo_lpepc/: PE_list  mddemo
demo_md/: PE_list  PE_newlist  eqm.h  fort.15  mddemo  mddemo.bgp  mddemo.jump  mddemo.sh  mddemo_bgp.sh  pepc.juropa.job  run.h  run.out  sort.h
demo_wake/: PE_list  bigsphere.h  clamp.h  clean_pes  copylap  copyparts  copysun  create_pes  eqm.h  makefile  parts_info.000200  parts_info.200k  parts_info.in  plasma_config.sh  run.h  shoot.h  shoot_200k.h  spk.rc  zap.sh  zap100.sh  zap200.sh
doc/: pepc_alg.ps  pepc_ug.ps  pepc_ug.tex
force_test/: makefile  makefile.defs  module_calc_force.f90
hpccount/: README
html/: README  README.demos  abort_8f90-source.html  abort_8f90.html  add__electrons_8f90-source.html  add__electrons_8f90.html  add__ramp_8f90-source.html  add__ramp_8f90.html  annotated.html  beam_8f90-source.html  beam_8f90.html  beam__control_8F90-source.html  beam__control_8F90.html  beam__dust_8f90-source.html  beam__dust_8f90.html  boundaries_8f90-source.html  boundaries_8f90.html  check__table_8f90-source.html  check__table_8f90.html  close__files_8f90-source.html  close__files_8f90.html  cluster__sa_8f90-source.html  cluster__sa_8f90.html  cold__start_8f90-source.html  cold__start_8f90.html  configure_8F90-source.html  configure_8F90.html  configure_8f90-source.html  configure_8f90.html  constrain_8f90-source.html  constrain_8f90.html  cutvector_8f90-source.html  cutvector_8f90.html  densities_8f90-source.html  densities_8f90.html  diagnose__tree_8f90-source.html  diagnose__tree_8f90.html  diagnostics_8F90-source.html  diagnostics_8F90.html  dir_28272fc65e3d756317163f9acb2ad644.html  (+437 more)
job-scripts/: pepc.jugene.job  pepc.jump.job  pepc.juropa.job
kojak/: blist  demo.job  hpm.job  kojak.h  kojak.job  kojak_old.h  notune.job  pack.sh  pack_hpm.sh  run.h  run.sh  run_old.sh  tune.job  tune_old.h
lpepcsrc/: Makefile.in  check_table.f90  cleanup_treearrays.f90  diagnose_tree.f90  draw2d.f90  draw2d_hash.f90  draw_domains.f90  draw_gle.f90  draw_lists.f90  draw_map.f90  driver.f90  fields.f90  fields_p.f90  fields_p1.f90  get_address.f90  get_next_node.f90  get_node.f90  key_test.f90  libpepc_finalize.f90  libpepc_setup.f90  mac.f90  make_hashentry.f90  makefile  makefile.bgl  makefile.cray  makefile.ibm  makefile.in  module.deps  module_allocation.f90  module_branching.f90  module_calc_force.f90  module_debug.f90  module_fmm_framework.f90  module_htable.f90  module_interaction_specific.f90  module_math_tools.f90  module_multipole_helpers.f90  module_pepcfields.f90  module_spacefilling.f90  module_tree.f90  (+33 more)
makefiles/: Notes.GCC  Notes.Intel  makefile.build  makefile.defs.GCC  makefile.defs.Intel  makefile.defs.NVHPC  makefile.defs.PGI  makefile.defs.XLF  makefile.defs.cray_gcc-4.8  makefile.defs.darwin  makefile.defs.gcc-4.5  makefile.defs.gcc-4.6  makefile.defs.gcc-4.7  makefile.defs.gcc-4.8  makefile.defs.gcc-4.9  makefile.defs.gnu-linux  makefile.defs.helios_intel  makefile.defs.helios_intel_BULLMPI  makefile.defs.jube  makefile.defs.judge_oclmfc  makefile.defs.jugene  makefile.defs.jugene.pepc-v  makefile.defs.julia_intel  makefile.defs.jump  makefile.defs.juqueen  makefile.defs.juqueen.gcc-4.9  makefile.defs.juqueen.hotfix  makefile.defs.juqueen_gcc-4.7  makefile.defs.juqueen_gcc-4.8  makefile.defs.juqueen_gcc-4.9  makefile.defs.juqueen_gcc-4.9.3  makefile.defs.juqueen_xlf  makefile.defs.jureca_booster_gcc  makefile.defs.jureca_booster_intel  makefile.defs.jureca_gcc  makefile.defs.jureca_intel  makefile.defs.jureca_nvhpc  makefile.defs.juropa  makefile.defs.juropa3_mic_intel  makefile.defs.juropa_gcc  (+24 more)
master/: result_database.sqlite
memwatch/: makefile  memwatchc.c  memwatchf.f90  memwatchtest.f90  signalhandler.c
mkdocs/: index.md
pegs/: boundaries.f90  close_files.f90  configure.f90  densities.f90  diagnostics.f90  dump.f90  dump_inputs.f90  energy_cons.f90  forces.f90  forces_p.f90  ibm-p690.mk  key_test.f90  kinenergy.f90  linux.mk  makefile  makefile.old  open_files.f90  pegs.f90  physvars.f90  pot_grid.f90  potenergy.f90  predef_parts.f90  push.f90  setup.f90  setup_2disc.f90  setup_arrays.f90  setup_particles.f90  setup_stars.f90  slicer.f90  slices.f90  stars.f90  stars_save.f90  velocities.f90
pepc-b/: abort.f90  add_electrons.f90  add_ramp.f90  arc-icl.mk  beam_control.f90  beam_dust.f90  bgl.mk  boundaries.f90  close_files.f90  cluster_sa.f90  cold_start.f90  config_private.h  configure.F90  configure.f90  constrain.f90  cutvector.f90  densities.f90  density_helmholtz.f90  diagnostics.F90  diagnostics.f90  double_target.f90  dump.f90  dump_ascii.f90  dump_fields.f90  dump_old.f90  dump_sion.f90  earth_plate.f90  em_helmholtz.f90  emoblique.f90  emplane_lin.f90  empond.f90  energy_cons.f90  error_test.f90  f90depend  face.f90  force_direct.f90  force_laser.f90  fpond.f90  fpond_helm.f90  fpond_helmc.f90  (+75 more)
pepc-e/: arc-icl.mk  benchmarking.f90  cleanup.f90  (+42 more)
(+1801 files in other folders)
